# chat-app

./: Cargo.toml  README.md  docker-compose.yml
src/: consumer.rs  main.rs  rooms.rs
