[package]
name = "chatapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures-util = "0.3.30"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
